# modern-cpp

01-basic-features/exercises/: CMakeLists.txt  main.cpp  pre-test.md  static_assert.cpp
shapes/: Rectangle.cpp  Rectangle.hpp  Shape.hpp  main.cpp
